# yolo-xml

./: CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  deny_warnings.yml  pr_checks.yml
src/: blocking.rs  buffer.rs  iter.rs  lenses.rs  lib.rs  peek_stream.rs  predicate.rs  scanner.rs  tokenizer.rs  utils.rs  xml_element.rs  xml_name.rs
src/scanner/: xml1_0.rs  xml1_1.rs
tests/: scanner.rs
