[package]
name = "yolo-xml"
version = "0.0.1"
authors = ["Tamme Schichler <tamme@schichler.dev>"]
edition = "2018"
description = "A (hardened, validating, asynchronous) XML pull parser that respects your time."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Tamschi/yolo-xml"
homepage = "https://github.com/Tamschi/yolo-xml/tree/v0.0.1"
documentation = "https://docs.rs/yolo-xml/0.0.1"
keywords = [] #TODO
categories = [] #TODO
readme = "README.md"
include = [
	"**/*.rs",
	"!tests/unincluded_*.rs", # Tests of meta data files not included in the package.
	"Cargo.toml",
	"CHANGELOG.md",
	"CODE_OF_CONDUCT.md",
	"COPYRIGHT.md",
	"LICENSE-*",
	"README.md",
	"SECURITY.md",
]
resolver = "2"
publish = false

[badges]
is-it-maintained-issue-resolution = { repository = "Tamschi/yolo-xml" }
is-it-maintained-open-issues = { repository = "Tamschi/yolo-xml" }
maintenance = { status = "experimental" } # This may differ between branches.

[features]
std = [] # Implements `std::error::Error` for `Error`.

[dependencies]
ergo-pin = "0.1.0" # Patches may require newer compiler versions.
futures-core = { version = "0.3.16", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.16", default-features = false, features = ["alloc"] }
miette = "5.3.0"
nom = "7.1.1"
pin-project = "1.0.7"
tap = "1.0.1"
this-is-fine = "0.0.1"
thiserror = "1.0.37"
tracing = { version = "0.1.26", default-features = false, features = ["attributes"] }

[dev-dependencies]
cargo-husky = "1.5.0"
git_info = "0.1.2"
version-sync = "0.9.3"
wasm-bindgen-test = "0.3.28"
